# CMake

./: CMakeLists.txt  Commands.cmake  ControlBlocks.cmake  SimpleMessage.cmake  main.cpp  message_context.cmake
Project_1/: CMakeLists.txt  LICENSE  main.cpp
Project_2/src/: CMakeLists.txt  calculations.cpp  calculations.h  drawing.h  drawings.cpp  gui.cpp  terminal.cpp
Project_3/src/: CMakeLists.txt  empty.cpp
Project_4/: CMakeLists.txt
Project_4/src/: main.cpp
Project_4/src/exampleClass/: exampleClass.h
